--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "build-css": "node-sass src/styles/styles.scss -o src/styles"
+    "build-css": "node-sass src/styles/styles.scss -o src/styles",
+    "format": "prettier --write \"src/**/*.js\""
   },
   "eslintConfig": {
     "extends": [
@@ -58,6 +59,7 @@
   "devDependencies": {
     "gh-pages": "^5.0.0",
     "node-sass": "^7.0.3",
+    "prettier": "2.8.7",
     "sass-loader": "^13.2.2"
   }
 }
